[package]
name = "nereon"
description = "Riboseinc configuration library for Rust"
version = "0.2.0"
authors = ["John Hedges <john@drystone.co.uk>"]
license = "BSD-2-Clause"
repository = "https://github.com/riboseinc/rust-nereon"
readme = "README.md"

exclude = ["/**/*~", "/**/.dir-locals.el"]

[workspace]
members = ["noc", "derive", "derive-test"]

[dependencies]
clap = "2.32"
lazy_static = "1.1"
pest = "1.0"
pest_derive = "*"
nereon_derive = { path = "derive" }