[package]
name = "nereon"
description = "Riboseinc configuration library for Rust"
version = "0.3.4"
authors = ["John Hedges <john@drystone.co.uk>", "Ribose Inc. <open.source@ribose.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/riboseinc/rust-nereon"
readme = "README.md"

exclude = [".gitignore", ".travis.yml"]

[workspace]
members = ["noc", "derive", "derive-test"]

[dependencies]
clap = "2.32"
lazy_static = "1.1"
pest = "2.0"
pest_derive = "2.0"
nereon_derive = "0.2"

[dev-dependencies]
toml = "0.4"