[package]
name = "noc"
description = "Nereon NOC syntax checker and playground server"
authors = ["John Hedges <john@drystone.co.uk>"]
repository = "https://github.com/riboseinc/rust-nereon"
version = "0.1.3"
license = "BSD-2-Clause"
exclude = ["/**/*~", "/**/.dir-locals.el"]

[dependencies]
nereon = "0.3"
nereon_derive = "0.2"
tiny_http = "0.6"
