[package]
name = "noc"
description = "Nereon NOC syntax checker and playground server"
authors = ["John Hedges <john@drystone.co.uk>", "Ribose Inc. <open.source@ribose.com>"]
repository = "https://github.com/riboseinc/rust-nereon"
version = "0.4.3"
license = "BSD-2-Clause"
exclude = ["/**/*~", "/**/.dir-locals.el"]

[dependencies]
nereon = { path = ".." }
nereon_derive = { path = "../derive" }
tiny_http = "0.6"
